Fixes
- FLOW-8739 Portrait formatted images should not be cropped

--- a/template/src/sections/PicturePages/PicturePages.scss
+++ b/template/src/sections/PicturePages/PicturePages.scss
@@ -22,7 +22,8 @@
             .picHolder {
                 width: 100%;
                 height: 100%;;
-                background-size: cover;
+                background-size: contain;
+                background-repeat: no-repeat;
                 background-position: center;
                 -webkit-print-color-adjust: exact;
                 transition: all 10s ease-in-out;
